@@ -6,7 +6,7 @@ use warnings;
 use English qw(-no_match_vars);
 use File::Object;
 use Pod::Example qw(get);
-use Test::More 'tests' => 14;
+use Test::More 'tests' => 15;
 use Test::NoWarnings;
 
 # Load module.
@@ -120,3 +120,23 @@ print "Foo.\n";
 END
 chomp $right_ret;
 is($ret, $right_ret, 'Example with inner html code.');
+
+# Test.
+$ret = get($modules_dir->file('Ex8.pm')->s);
+$right_ret = <<'END';
+# Pragmas.
+use strict;
+use warnings;
+
+# Print.
+print "Foo.\n";
+
+#   +-------------+
+#   |  foo        |
+#   |        bar  |
+#   +-------------+
+#
+# ^^^^ Figure 1. ^^^^
+END
+chomp $right_ret;
+is($ret, $right_ret, 'Example with inner text code.');
