@@ -1,0 +1,30 @@
+package Ex8;
+
+# Version.
+our $VERSION = 0.01;
+
+1;
+
+=pod
+
+=head1 EXAMPLE
+
+ # Pragmas.
+ use strict;
+ use warnings;
+
+ # Print.
+ print "Foo.\n";
+
+=begin text
+
+   +-------------+
+   |  foo        |
+   |        bar  |
+   +-------------+
+
+ ^^^^ Figure 1. ^^^^
+
+=end html
+
+=cut
